--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ body {
 
 .a{
    color: var(--second_dark_color);
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .s{
@@ -116,32 +117,6 @@ body {
     height: 4px;
     border-radius: 2px;
     background-color: var(--main_color);
-}
-.stud::after{
-   content: "";
-    position: absolute;
-    bottom: -32px;
-    left: 0;
-    width:100% ;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--main_color);
-    opacity: 0;
-    transform: scaleX(0);
-    transition:
-        transform 300ms cubic-bezier(0.83, -0.08, 0.32, 1) 250ms,
-        opacity 300ms cubic-bezier(0.83, -0.08, 0.32, 1) 250ms;
-        
-
-}
-.stud:hover:after {
-    opacity: 1;
-    transform: scaleX(1);
-}
-
-
-.stud:hover {
-    cursor: pointer;
 }
 
 
@@ -177,9 +152,6 @@ body {
    margin-right:  290px;;
 }
 
-.a:hover {
-   color: var(--main_color);
-}
 .na{
    color: var(--main_color);
 }
@@ -254,7 +226,25 @@ body {
    color: var(--light_color);
    background-color: var(--main_color);
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+   animation: pulse 1.5s infinite;
 }
+
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(173, 216, 230, 0.7);
+  }
+  70% {
+    transform: scale(1.1);
+    box-shadow: 0 0 0 15px rgba(255, 77, 77, 0);
+  }
+  100% {
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(255, 77, 77, 0);
+  }
+}
+
 /*! 1.Бєк-дроп з модальним вікном */
 .backdrop {
     position: fixed;
@@ -264,6 +254,7 @@ body {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
     opacity: 1;
+    transition: opacity 0.3s ease;
 }
 
 .is-hidden {
@@ -399,6 +390,17 @@ border: none;
     color: var(--main_color);
     text-decoration: underline;
    }
+
+   .modal {
+    transform: translate(-50%, -50%) scale(0.8);
+    opacity: 0;
+    transition: transform 0.8s ease, opacity 0.3s ease;
+}
+
+.backdrop:not(.is-hidden) .modal {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+}
 
 
 .features {
